--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam beatae iste velit necessitatibus a est. Vel saepe nemo deleniti, voluptates at recusandae aut necessitatibus dolores ipsum nisi. Saepe, incidunt repellat.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, laborum a. Unde tempore quas laboriosam ea, pariatur aliquam odio sapiente quae consequuntur. Aut, dolorem officiis corporis molestias debitis quisquam labore!</p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
